Start doing some math commands

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -6,3 +6,17 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
+
+%Definition of BigO
+\newcommand{\BigO}[1]{\mathcal{O}\left(#1\right)}
+
+%Definition of the norm
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
+%Definition of complexity classes
+\renewcommand{\P}{\textbf{P}}
+\newcommand{\NP}{\textbf{NP}}
+\newcommand{\PSPACE}{\textbf{PSPACE}}
+\newcommand{\CLS}{\textbf{CLS}}
+\newcommand{\EOPS}{\textbf{EOPS}}
+\newcommand{\PPAD}{\textbf{PPAD}}
