Add Math testing

--- a/preamble.tex
+++ b/preamble.tex
@@ -9,10 +9,10 @@
 
 % Load the bibliography package
 \usepackage{styling/kaobiblio}
-\addbibresource{minimal.bib} % Bibliography file
+\addbibresource{bibliography.bib} % Bibliography file
 
 % Load mathematical packages for theorems and related environments
-\usepackage{math_styling/theorems}
+\usepackage[framed=true]{math_styling/theorems}
 
 % Load the package for hyperreferences
 \usepackage{styling/kaorefs}
