--- a/thesis.tex
+++ b/thesis.tex
@@ -26,6 +26,7 @@
 \setchapterstyle{kao} % Choose the default chapter heading style
 
 \input{content/chapters/indroduction.tex} %Insert the first chapter
+\input{content/testing/math.tex} %Insert the second chapter
 %\newpartpage{Part One}
 
 \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
