Start work on preliminaries

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,3 +57,53 @@ Version Number: 1.0},
 	langid = {english},
 	file = {Goos et al. - Further Collapses in TFNP.pdf:/home/nils/Zotero/storage/KRDG4T2P/Goos et al. - Further Collapses in TFNP.pdf:application/pdf},
 }
+
+@misc{fearnley_end_2018,
+	title = {End of Potential Line},
+	url = {http://arxiv.org/abs/1804.03450},
+	abstract = {We introduce the problem {EndOfPotentialLine} and the corresponding complexity class {EOPL} of all problems that can be reduced to it in polynomial time. This class captures problems that admit a single combinatorial proof of their joint membership in the complexity classes {PPAD} of ﬁxpoint problems and {PLS} of local search problems. {EOPL} is a combinatorially-deﬁned alternative to the class {CLS} (for Continuous Local Search), which was introduced in [16] with the goal of capturing the complexity of some well-known problems in {PPAD} ∩ {PLS} that have resisted, in some cases for decades, attempts to put them in polynomial time. Two of these are Contraction, the problem of ﬁnding a ﬁxpoint of a contraction map, and P-{LCP}, the problem of solving a P-matrix Linear Complementarity Problem.},
+	number = {{arXiv}:1804.03450},
+	publisher = {{arXiv}},
+	author = {Fearnley, John and Gordon, Spencer and Mehta, Ruta and Savani, Rahul},
+	urldate = {2024-03-02},
+	date = {2018-04-18},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1804.03450 [cs]},
+	keywords = {Computer Science - Computational Complexity, Computer Science - Computer Science and Game Theory},
+	file = {Fearnley et al. - 2018 - End of Potential Line.pdf:/home/nils/Zotero/storage/LANQATC6/Fearnley et al. - 2018 - End of Potential Line.pdf:application/pdf},
+}
+
+@article{megiddo_total_1991,
+	title = {On total functions, existence theorems and computational complexity},
+	volume = {81},
+	issn = {03043975},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/030439759190200L},
+	doi = {10.1016/0304-3975(91)90200-L},
+	pages = {317--324},
+	number = {2},
+	journaltitle = {Theoretical Computer Science},
+	shortjournal = {Theoretical Computer Science},
+	author = {Megiddo, Nimrod and Papadimitriou, Christos H.},
+	urldate = {2024-03-05},
+	date = {1991-04},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/NUQDX5GZ/Megiddo and Papadimitriou - 1991 - On total functions, existence theorems and computa.pdf:application/pdf},
+}
+
+@article{papadimitriou_complexity_1994,
+	title = {On the complexity of the parity argument and other inefficient proofs of existence},
+	volume = {48},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000005800637},
+	doi = {10.1016/S0022-0000(05)80063-7},
+	pages = {498--532},
+	number = {3},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Papadimitriou, Christos H.},
+	urldate = {2024-03-05},
+	date = {1994-06},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/MVRCS8BK/Papadimitriou - 1994 - On the complexity of the parity argument and other.pdf:application/pdf},
+}
