--- a/content/testing/math.tex
+++ b/content/testing/math.tex
@@ -6,4 +6,8 @@
 \end{theorem}
 Let us see how the typeset complexity classes look: $\P$, $\NP$, $\PSPACE$.
 
-Also a citation\sidecite{hollender_structural_2021} will look like this.
+Also a citation
+\sidecite{hollender_structural_2021} will look like this.
+
+This is a test of how the \texttt{kaobook} class handles the the command
+\textsc{scshape}.
