--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -14,9 +14,16 @@
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
 %Definition of complexity classes
+%Have the caracters be in Fira Sans Medium
 \renewcommand{\P}{\textbf{P}}
+\newcommand{\TFNP}{\textbf{TNFP}}
+\newcommand{\PLS}{\textbf{PLS}}
 \newcommand{\NP}{\textbf{NP}}
 \newcommand{\PSPACE}{\textbf{PSPACE}}
 \newcommand{\CLS}{\textbf{CLS}}
-\newcommand{\EOPS}{\textbf{EOPS}}
+\newcommand{\EOPL}{\textbf{EOPL}}
 \newcommand{\PPAD}{\textbf{PPAD}}
+
+\newcommand{\Tarski}{\textsc{Tarski}}
+
+\newcommand{\binstr}{\{0, 1\}^*}
