--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -3,394 +3,39 @@
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
 %----------------------------------------------------------------------------------------
+\let\openbox\relax
+\RequirePackage{amsmath} % For including equations
+\RequirePackage{amssymb} % For including symbols
+\RequirePackage{amsthm} % For including theorems
+\RequirePackage{thmtools} % For including theorems
 
-\RequirePackage{kvoptions} % Handle package options
-\SetupKeyvalOptions{
-	family = theorems,
-	prefix = theorems@
-}
+%------------------------------------------------
 
-\DeclareBoolOption{framed}% If true, put theorems into colorful boxes, otherwise write them like normal text
+% Black theorem number and optional black title padding above and below
+\newtheoremstyle{blacknumbox} % Theorem style name
+	{0pt} % Space above
+	{0pt} % Space below
+	{\normalfont} % Body font
+	{} % Indent amount
+	{} % Theorem head font
+	{} % Punctuation after theorem head
+	{0.25em} % Space after theorem head
+	{\sffamily\bfseries\thmname{#1}~\thmnumber{\@ifnotempty{#1}{}\@upn{#2}} % Theorem text (e.g. Theorem 2.1)
+	\thmnote{\sffamily\bfseries---~#3.\hspace{0.25em}}\newline} % Optional theorem note
 
-% Define the options to finely tune the background color of each element.
-% If only the 'background' option is specified, all types of theorem will have that background. If more specific options are set, the previous option will be overwritten.
-\newcommand{\theorems@defaultbg}{Goldenrod!45!white}
-\DeclareStringOption[\theorems@defaultbg]{background}
-\DeclareStringOption[\theorems@defaultbg]{theorembackground}
-\DeclareStringOption[\theorems@defaultbg]{propositionbackground}
-\DeclareStringOption[\theorems@defaultbg]{lemmabackground}
-\DeclareStringOption[\theorems@defaultbg]{corollarybackground}
-\DeclareStringOption[\theorems@defaultbg]{definitionbackground}
-\DeclareStringOption[\theorems@defaultbg]{assumptionbackground}
-\DeclareStringOption[\theorems@defaultbg]{remarkbackground}
-\DeclareStringOption[\theorems@defaultbg]{examplebackground}
-\DeclareStringOption[\theorems@defaultbg]{exercisebackground}
+%------------------------------------------------
 
-\ProcessKeyvalOptions{theorems} % Process the options
-
-\let\openbox\relax % Workaround to avoid a nasty error
-\RequirePackage{amsmath} % Improved mathematics
-\RequirePackage{amsthm} % Mathematical environments
-\RequirePackage{thmtools} % Theorem styles
+% Black theorem number and optional black title with padding above and below
+\theoremstyle{blacknumbox}
+\newtheorem{definitionT}{Definition}[chapter] % Definitions, the first argument is the theorem name, the second the theorem title used before the number and the third optional argument is whether to number under chapters (e.g. 2.1) or sections (e.g. 2.1.1)
 
 %----------------------------------------------------------------------------------------
-%	STYLE DEFINITIONS
+%	COLORED THEOREM BOXES
 %----------------------------------------------------------------------------------------
 
-\iftheorems@framed% Define the style of the mdframed boxes for theorems
-	\RequirePackage[most]{tcolorbox}
+\RequirePackage{tcolorbox} % Required for colored boxes
 
-	% Box style
-	\tcbset{tcbkao/.style={
-		breakable,
-		before skip=\topskip,
-		after skip=\topskip,
-		left skip=0pt,
-		right skip=0pt,
-		top=5pt,
-		bottom=3pt,
-		left=2pt,
-		right=2pt,
-		sharp corners,
-		boxrule=0pt,
-		frame hidden,
-	}}
+% Definition box
+\newtcolorbox{dBox}{colback=gray!5!white,colframe=black,boxrule=0.5pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base}
 
-	% Theorem styles
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaoplain}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaodefinition}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaoassumption}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\normalfont,
-		%headformat={\footnotesize$\triangleright$\space\normalsize\NAME\space\NUMBER\space\NOTE},
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoremark}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\normalfont,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoexample}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\small,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoexercise}
-
-	% Theorems using the 'kaoplain' style
-	\theoremstyle{kaoplain}
-	\declaretheorem[
-		name=Theorem,
-		style=kaoplain,
-		%refname={theorem,theorems},
-		refname={Theorem,Theorems},
-		Refname={Theorem,Theorems},
-		numberwithin=section,
-	]{theorem}
-	\tcolorboxenvironment{theorem}{
-		colback=\theorems@theorembackground,tcbkao
-	}
-	\declaretheorem[
-		name=Proposition,
-		%refname={proposition,propositions},
-		refname={Proposition,Propositions},
-		Refname={Proposition,Propositions},
-		sibling=theorem,
-	]{proposition}
-	\tcolorboxenvironment{proposition}{
-		colback=\theorems@propositionbackground,tcbkao
-	}
-	\declaretheorem[
-		name=Lemma,
-		%refname={lemma,lemmas},
-		refname={Lemma,Lemmas},
-		Refname={Lemma,Lemmas},
-		sibling=theorem,
-	]{lemma}
-	\tcolorboxenvironment{lemma}{
-		colback=\theorems@lemmabackground,tcbkao
-	}
-	\declaretheorem[
-		name=Corollary,
-		%refname={corollary,corollaries},
-		refname={Corollary,Corollaries},
-		Refname={Corollary,Corollaries},
-		sibling=theorem,
-	]{corollary}
-	\tcolorboxenvironment{corollary}{
-		colback=\theorems@corollarybackground,tcbkao
-	}
-
-	% Theorems using the 'kaodefinition' style
-	\theoremstyle{kaodefinition}
-	\declaretheorem[
-		name=Definition,
-		%refname={definition,definitions},
-		refname={Definition,Definitions},
-		Refname={Definition,Definitions},
-		numberwithin=section,
-	]{definition}
-	\tcolorboxenvironment{definition}{
-		colback=\theorems@definitionbackground,tcbkao
-	}
-
-	% Theorems using the 'kaoassumption' style
-	\theoremstyle{kaoassumption}
-	\declaretheorem[
-		name=Assumption,
-		%refname={assumption,assumptions},
-		refname={Assumption,Assumptions},
-		Refname={Assumption,Assumptions},
-		numberwithin=section,
-	]{assumption}
-	\tcolorboxenvironment{assumption}{
-		colback=\theorems@assumptionbackground,tcbkao
-	}
-
-	% Theorems using the 'kaoremark' style
-	\theoremstyle{kaoremark}
-	\declaretheorem[
-		name=Remark,
-		%refname={remark,remarks},
-		refname={Remark,Remarks},
-		Refname={Remark,Remarks},
-		numberwithin=section,
-	]{remark}
-	\tcolorboxenvironment{remark}{
-		colback=\theorems@remarkbackground,tcbkao
-	}
-
-	% Theorems using the 'kaoexample' style
-	\theoremstyle{kaoexample}
-	\declaretheorem[
-		name=Example,
-		%refname={example,examples},
-		refname={Example,Examples},
-		Refname={Example,Examples},
-		numberwithin=section,
-	]{example}
-	\tcolorboxenvironment{example}{
-		colback=\theorems@examplebackground,tcbkao
-	}
-
-	% Theorems using the 'kaoexercise' style
-	\theoremstyle{kaoexercise}
-	\declaretheorem[
-		name=Exercise,
-		%refname={exercise,exercises},
-		refname={Exercise,Exercises},
-		Refname={Exercise,Exercises},
-		numberwithin=section,
-	]{exercise}
-	\tcolorboxenvironment{exercise}{
-		colback=\theorems@exercisebackground,tcbkao
-	}
-
-	%\renewcommand{\thetheorem}{\arabic{chapter}.\arabic{section}.\arabic{theorem}}
-	%\renewcommand{\thetheorem}{\arabic{subsection}.\arabic{theorem}}
-	%\renewcommand{\qedsymbol}{$\blacksquare$}
-\else % If not using mdframed
-	% Theorem styles
-	\declaretheoremstyle[
-		spaceabove=.6\thm@preskip,
-		spacebelow=.1\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaoplain}
-	\declaretheoremstyle[
-		spaceabove=.6\thm@preskip,
-		spacebelow=.1\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaodefinition}
-	\declaretheoremstyle[
-		spaceabove=.6\thm@preskip,
-		spacebelow=.1\thm@postskip,
-		%headfont=\normalfont\bfseries,%\scshape,
-		%notefont=\normalfont, notebraces={ (}{)},
-		bodyfont=\normalfont\itshape,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-	]{kaoassumption}
-	\declaretheoremstyle[
-		spaceabove=.6\thm@preskip,
-		spacebelow=.1\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\normalfont,
-		%headformat={\footnotesize$\triangleright$\space\normalsize\NAME\space\NUMBER\space\NOTE},
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoremark}
-	\declaretheoremstyle[
-		spaceabove=.6\thm@preskip,
-		spacebelow=.1\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\normalfont,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		%postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoexample}
-	\declaretheoremstyle[
-		%spaceabove=.5\thm@preskip,
-		%spacebelow=.5\thm@postskip,
-		%headfont=\normalfont\bfseries,
-		%notefont=\normalfont, notebraces={ (}{)},
-		%bodyfont=\normalfont,
-		%headformat={\NAME\space\NUMBER\space\NOTE},
-		headpunct={},
-		postheadspace={.5em plus .1em minus .1em},
-		%prefoothook={\hfill\qedsymbol}
-		%refname={theorem,theorems},
-		%Refname={Theorem,Theorems},
-	]{kaoexercise}
-
-	% Theorems using the 'kaoplain' style
-	\theoremstyle{kaoplain}
-	\declaretheorem[
-		name=Theorem,
-		refname={Theorem,Theorems},
-		Refname={Theorem,Theorems},
-		numberwithin=section,
-	]{theorem}
-	\declaretheorem[
-		name=Proposition,
-		refname={Proposition,Propositions},
-		Refname={Proposition,Propositions},
-		sibling=theorem,
-	]{proposition}
-	\declaretheorem[
-		name=Lemma,
-		refname={Lemma,Lemmas},
-		Refname={Lemma,Lemmas},
-		sibling=theorem,
-	]{lemma}
-	\declaretheorem[
-		name=Corollary,
-		refname={Corollary,Corollaries},
-		Refname={Corollary,Corollaries},
-		sibling=theorem,
-	]{corollary}
-
-	% Theorems using the 'kaodefinition' style
-	\theoremstyle{kaodefinition}
-	\declaretheorem[
-		name=Definition,
-		refname={Definition,Definitions},
-		Refname={Definition,Definitions},
-		numberwithin=section,
-	]{definition}
-	
-	% Theorems using the 'kaoassumption' style
-	\theoremstyle{kaoassumption}
-	\declaretheorem[
-		name=Assumption,
-		refname={Assumption,Assumptions},
-		Refname={Assumption,Assumptions},
-		numberwithin=section,
-	]{assumption}
-
-	% Theorems using the 'kaoremark' style
-	\theoremstyle{kaoremark}
-	\declaretheorem[
-		name=Remark,
-		refname={Remark,Remarks},
-		Refname={Remark,Remarks},
-		numberwithin=section,
-	]{remark}
-
-	% Theorems using the 'kaoexample' style
-	\theoremstyle{kaoexample}
-	\declaretheorem[
-		name=Example,
-		refname={Example,Examples},
-		Refname={Example,Examples},
-		numberwithin=section,
-	]{example}
-
-	% Theorems using the 'kaoexercise' style
-	\theoremstyle{kaoexercise}
-	\declaretheorem[
-		name=Exercise,
-		refname={Exercise,Exercises},
-		Refname={Exercise,Exercises},
-		numberwithin=section,
-	]{exercise}
-
-	%\renewcommand{\thetheorem}{\arabic{chapter}.\arabic{section}.\arabic{theorem}}
-	%\renewcommand{\thetheorem}{\arabic{subsection}.\arabic{theorem}}
-	%\renewcommand{\qedsymbol}{$\blacksquare$}
-\fi
-
+\newenvironment{definition}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}
