--- a/styling/title_page.tex
+++ b/styling/title_page.tex
@@ -16,7 +16,7 @@
     \hspace*{0.3\textwidth}
     {\large \today}\par
     \vspace*{2.5\drop}
-    {\large By Nils Jensen}
+    {\Large Nils Jensen}
     \vfill
     {\scshape Advised by}\par
     {\scshape Prof.\ Dr.\ Bernd Gärtner}\par
