Work on Introduction, and write part on Tarski Problem

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -58,7 +58,7 @@ Version Number: 1.0},
 	file = {Goos et al. - Further Collapses in TFNP.pdf:/home/nils/Zotero/storage/KRDG4T2P/Goos et al. - Further Collapses in TFNP.pdf:application/pdf},
 }
 
-@misc{fearnley_end_2018,
+@misc{EOPL_introduction,
 	title = {End of Potential Line},
 	url = {http://arxiv.org/abs/1804.03450},
 	abstract = {We introduce the problem {EndOfPotentialLine} and the corresponding complexity class {EOPL} of all problems that can be reduced to it in polynomial time. This class captures problems that admit a single combinatorial proof of their joint membership in the complexity classes {PPAD} of ﬁxpoint problems and {PLS} of local search problems. {EOPL} is a combinatorially-deﬁned alternative to the class {CLS} (for Continuous Local Search), which was introduced in [16] with the goal of capturing the complexity of some well-known problems in {PPAD} ∩ {PLS} that have resisted, in some cases for decades, attempts to put them in polynomial time. Two of these are Contraction, the problem of ﬁnding a ﬁxpoint of a contraction map, and P-{LCP}, the problem of solving a P-matrix Linear Complementarity Problem.},
@@ -106,4 +106,33 @@ Version Number: 1.0},
 	date = {1994-06},
 	langid = {english},
 	file = {Submitted Version:/home/nils/Zotero/storage/MVRCS8BK/Papadimitriou - 1994 - On the complexity of the parity argument and other.pdf:application/pdf},
+}
+
+@article{johnson_how_1988,
+	title = {How easy is local search?},
+	volume = {37},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0022000088900463},
+	doi = {10.1016/0022-0000(88)90046-3},
+	pages = {79--100},
+	number = {1},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Johnson, David S. and Papadimitriou, Christos H. and Yannakakis, Mihalis},
+	urldate = {2024-03-06},
+	date = {1988-08},
+	langid = {english},
+	file = {Johnson et al. - 1988 - How easy is local search.pdf:/home/nils/Zotero/storage/52PEUSNQ/Johnson et al. - 1988 - How easy is local search.pdf:application/pdf},
+}
+
+@article{tarski_lattice-theoretical_1955,
+	title = {A lattice-theoretical fixpoint theorem and its applications.},
+	volume = {5},
+	pages = {285--309},
+	number = {2},
+	journaltitle = {Pacific Journal of Mathematics},
+	shortjournal = {Pacific Journal of Mathematics},
+	author = {Tarski, Alfred},
+	date = {1955-01-01},
+	file = {Alfred Tarski - 1955 - A lattice-theoretical fixpoint theorem and its app.pdf:/home/nils/Zotero/storage/MCXNMU5M/Alfred Tarski - 1955 - A lattice-theoretical fixpoint theorem and its app.pdf:application/pdf},
 }
