--- a/preamble.tex
+++ b/preamble.tex
@@ -54,6 +54,9 @@
 \tolerance=500
 \hyphenpenalty=500
 
+%Remove space before itemize
+\setlist{nosep}
+
 %----------------------------------------------------------------------------------------
 %	BOOK INFORMATION
 %----------------------------------------------------------------------------------------
