--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -18,12 +18,15 @@
 \renewcommand{\P}{\textbf{P}}
 \newcommand{\TFNP}{\textbf{TNFP}}
 \newcommand{\PLS}{\textbf{PLS}}
+\newcommand{\FNP}{\textbf{FNP}}
 \newcommand{\NP}{\textbf{NP}}
+\newcommand{\coNP}{\textbf{coNP}}
 \newcommand{\PSPACE}{\textbf{PSPACE}}
 \newcommand{\CLS}{\textbf{CLS}}
 \newcommand{\EOPL}{\textbf{EOPL}}
 \newcommand{\PPAD}{\textbf{PPAD}}
 
 \newcommand{\Tarski}{\textsc{Tarski}}
+\newcommand{\Localopt}{\textsc{Localopt}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
