Work on subsection EOPL

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -136,3 +136,62 @@ Version Number: 1.0},
 	date = {1955-01-01},
 	file = {Alfred Tarski - 1955 - A lattice-theoretical fixpoint theorem and its app.pdf:/home/nils/Zotero/storage/MCXNMU5M/Alfred Tarski - 1955 - A lattice-theoretical fixpoint theorem and its app.pdf:application/pdf},
 }
+
+@thesis{borzechowski_complexity_2021,
+	title = {The Complexity Class Unique End of Potential Line},
+	url = {https://www.mi.fu-berlin.de/inf/groups/ag-ti/theses/download/Borzechowski21.pdf},
+	institution = {Freien Universität Berlin},
+	type = {phdthesis},
+	author = {Borzechowski, Michaela},
+	date = {2021},
+	langid = {english},
+	file = {Borzechowski - The Complexity Class Unique End of Potential Line.pdf:/home/nils/Zotero/storage/LRJPAHFJ/Borzechowski - The Complexity Class Unique End of Potential Line.pdf:application/pdf},
+}
+
+@article{ishizuka_complexity_2021,
+	title = {The complexity of the parity argument with potential},
+	volume = {120},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000021000283},
+	doi = {10.1016/j.jcss.2021.03.004},
+	pages = {14--41},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Ishizuka, Takashi},
+	urldate = {2024-03-10},
+	date = {2021-09},
+	langid = {english},
+	file = {Ishizuka - 2021 - The complexity of the parity argument with potenti.pdf:/home/nils/Zotero/storage/AHSZZ6IZ/Ishizuka - 2021 - The complexity of the parity argument with potenti.pdf:application/pdf},
+}
+
+@article{goldberg_hairy_2021,
+	title = {The Hairy Ball problem is {PPAD}-complete},
+	volume = {122},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000021000556},
+	doi = {10.1016/j.jcss.2021.05.004},
+	pages = {34--62},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Goldberg, Paul W. and Hollender, Alexandros},
+	urldate = {2024-03-10},
+	date = {2021-12},
+	langid = {english},
+	file = {Full Text:/home/nils/Zotero/storage/E38B5UYM/Goldberg and Hollender - 2021 - The Hairy Ball problem is PPAD-complete.pdf:application/pdf},
+}
+
+@inproceedings{buresh-oppenheim_relativized_2004,
+	location = {Amherst, {MA}, {USA}},
+	title = {Relativized {NP} search problems and propositional proof systems},
+	isbn = {978-0-7695-2120-6},
+	url = {http://ieeexplore.ieee.org/document/1313795/},
+	doi = {10.1109/CCC.2004.1313795},
+	eventtitle = {19th {IEEE} Annual Conference on Computational Complexity, 2004.},
+	pages = {54--67},
+	booktitle = {Proceedings. 19th {IEEE} Annual Conference on Computational Complexity, 2004.},
+	publisher = {{IEEE}},
+	author = {Buresh-Oppenheim, J. and Morioka, T.},
+	urldate = {2024-03-10},
+	date = {2004},
+	file = {Buresh-Oppenheim and Morioka - 2004 - Relativized NP search problems and propositional p.pdf:/home/nils/Zotero/storage/JT69CTVF/Buresh-Oppenheim and Morioka - 2004 - Relativized NP search problems and propositional p.pdf:application/pdf},
+}
