--- a/preamble.tex
+++ b/preamble.tex
@@ -34,6 +34,8 @@
 \usepackage{fontspec} %Allows for the use of custom fonts
 \usepackage{math_styling/mathmacros} %Allows for the use of custom math fonts
 \usepackage{hyperref}
+\usepackage{graphicx}
+
 \input{styling/title_page.tex} %Use custom title page
 
 %Set the font to Fira Math for math symbols
