--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -30,3 +30,7 @@
 \newcommand{\Localopt}{\textsc{Localopt}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
+\newcommand{\bitstrn}{\{0, 1\}^n}
+
+%Medium size intersection
+\newcommand*{\medcap}{\mathbin{\scalebox{1.5}{\ensuremath{\cap}}}}%
