Add beginning of EOPL Reduction

--- a/content/testing/math.tex
+++ b/content/testing/math.tex
@@ -1,5 +1,4 @@
 \begin{theorem}\label{thm:fixed_point}
-    \marginnote{This is a margin note using the \texttt{kaobook} class.}
     Let $f: \R^n \to \R^n$ be a continuous function. If $f$ is
     contractive, then $f$ has a unique fixed point.
 \end{theorem}
@@ -10,3 +9,10 @@ Also a citation
 
 This is a test of how the \texttt{kaobook} class handles the the command
 \textsc{scshape}.
+
+\begin{figure}[ht]
+    \centering
+    \incfig{test}
+    \caption{Riemmans theorem}
+    \label{fig:riemmans-theorem}
+\end{figure}
