--- a/bibliography.bib
+++ b/bibliography.bib
@@ -195,3 +195,169 @@ Version Number: 1.0},
 	date = {2004},
 	file = {Buresh-Oppenheim and Morioka - 2004 - Relativized NP search problems and propositional p.pdf:/home/nils/Zotero/storage/JT69CTVF/Buresh-Oppenheim and Morioka - 2004 - Relativized NP search problems and propositional p.pdf:application/pdf},
 }
+
+@article{daskalakis_complexity_2009,
+	title = {The Complexity of Computing a Nash Equilibrium},
+	volume = {39},
+	issn = {0097-5397, 1095-7111},
+	url = {http://epubs.siam.org/doi/10.1137/070699652},
+	doi = {10.1137/070699652},
+	pages = {195--259},
+	number = {1},
+	journaltitle = {{SIAM} Journal on Computing},
+	shortjournal = {{SIAM} J. Comput.},
+	author = {Daskalakis, Constantinos and Goldberg, Paul W. and Papadimitriou, Christos H.},
+	urldate = {2024-03-11},
+	date = {2009-01},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/9CZTNG27/Daskalakis et al. - 2009 - The Complexity of Computing a Nash Equilibrium.pdf:application/pdf},
+}
+
+@inproceedings{goos_separations_2022,
+	location = {Denver, {CO}, {USA}},
+	title = {Separations in Proof Complexity and {TFNP}},
+	isbn = {978-1-66545-519-0},
+	url = {https://ieeexplore.ieee.org/document/9996792/},
+	doi = {10.1109/FOCS54457.2022.00111},
+	eventtitle = {2022 {IEEE} 63rd Annual Symposium on Foundations of Computer Science ({FOCS})},
+	pages = {1150--1161},
+	booktitle = {2022 {IEEE} 63rd Annual Symposium on Foundations of Computer Science ({FOCS})},
+	publisher = {{IEEE}},
+	author = {Goos, Mika and Hollender, Alexandros and Jain, Siddhartha and Maystre, Gilbert and Pires, William and Robere, Robert and Tao, Ran},
+	urldate = {2024-03-12},
+	date = {2022-10},
+	file = {Submitted Version:/home/nils/Zotero/storage/V34AKGX3/Goos et al. - 2022 - Separations in Proof Complexity and TFNP.pdf:application/pdf},
+}
+
+@book{papadimitriou_computational_1994,
+	location = {Reading (Mass)},
+	title = {Computational complexity},
+	isbn = {978-0-201-53082-7},
+	publisher = {Addison-Wesley},
+	author = {Papadimitriou, Christos H.},
+	date = {1994},
+}
+
+@inproceedings{daskalakis_continuous_2011,
+	title = {Continuous Local Search},
+	isbn = {978-0-89871-993-2 978-1-61197-308-2},
+	url = {https://epubs.siam.org/doi/10.1137/1.9781611973082.62},
+	doi = {10.1137/1.9781611973082.62},
+	eventtitle = {Twenty-Second Annual {ACM}-{SIAM} Symposium on Discrete Algorithms},
+	pages = {790--804},
+	booktitle = {Proceedings of the Twenty-Second Annual {ACM}-{SIAM} Symposium on Discrete Algorithms},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Daskalakis, Constantinos and Papadimitriou, Christos},
+	urldate = {2024-03-12},
+	date = {2011-01-23},
+	langid = {english},
+	file = {Daskalakis and Papadimitriou - 2011 - Continuous Local Search.pdf:/home/nils/Zotero/storage/R2Q4ZW2B/Daskalakis and Papadimitriou - 2011 - Continuous Local Search.pdf:application/pdf},
+}
+
+@book{knuth_art_1997,
+	location = {Reading, Massachusetts},
+	edition = {4th},
+	title = {The art of computer programming},
+	volume = {3},
+	publisher = {Addison-Wesely},
+	author = {Knuth, Donald Ervin},
+	date = {1997},
+	keywords = {Algorithmus, {LEHRBÜCHER} ({DOKUMENTENTYP}), {PROGRAMME} {UND} {ALGORITHMEN} {ZUR} {LÖSUNG} {SPEZIELLER} {PROBLEME}, Programmierung, {SEMANTIK} {VON} {PROGRAMMIERSPRACHEN} + {SYNTAX} {VON} {PROGRAMMIERSPRACHEN}, {THEORIE} {DER} {PROGRAMMIERUNG}},
+}
+
+@article{fearnley_unique_2020,
+	title = {Unique end of potential line},
+	volume = {114},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000020300520},
+	doi = {10.1016/j.jcss.2020.05.007},
+	pages = {1--35},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Fearnley, John and Gordon, Spencer and Mehta, Ruta and Savani, Rahul},
+	urldate = {2024-03-18},
+	date = {2020-12},
+	langid = {english},
+	file = {Ferney_UEOPL.pdf:/home/nils/Zotero/storage/LYIERPZQ/Ferney_UEOPL.pdf:application/pdf;Full Text:/home/nils/Zotero/storage/6S9QIKWP/Fearnley et al. - 2020 - Unique end of potential line.pdf:application/pdf},
+}
+
+@article{freudenthal_simplizialzerlegungen_1942,
+	title = {Simplizialzerlegungen von Beschrankter Flachheit},
+	volume = {43},
+	issn = {0003486X},
+	url = {https://www.jstor.org/stable/1968813?origin=crossref},
+	doi = {10.2307/1968813},
+	pages = {580},
+	number = {3},
+	journaltitle = {The Annals of Mathematics},
+	shortjournal = {The Annals of Mathematics},
+	author = {Freudenthal, Hans},
+	urldate = {2024-03-21},
+	date = {1942-07},
+	file = {Freudenthal - 1942 - Simplizialzerlegungen von Beschrankter Flachheit.pdf:/home/nils/Zotero/storage/RKMEBT8S/Freudenthal - 1942 - Simplizialzerlegungen von Beschrankter Flachheit.pdf:application/pdf},
+}
+
+@misc{etessami_tarskis_2019,
+	title = {Tarski's Theorem, Supermodular Games, and the Complexity of Equilibria},
+	url = {http://arxiv.org/abs/1909.03210},
+	abstract = {The use of monotonicity and Tarski's theorem in existence proofs of equilibria is very widespread in economics, while Tarski's theorem is also often used for similar purposes in the context of verification. However, there has been relatively little in the way of analysis of the complexity of finding the fixed points and equilibria guaranteed by this result. We study a computational formalism based on monotone functions on the \$d\$-dimensional grid with sides of length \$N\$, and their fixed points, as well as the closely connected subject of supermodular games and their equilibria. It is known that finding some (any) fixed point of a monotone function can be done in time \${\textbackslash}log{\textasciicircum}d N\$, and we show it requires at least \${\textbackslash}log{\textasciicircum}2 N\$ function evaluations already on the 2-dimensional grid, even for randomized algorithms. We show that the general Tarski problem of finding some fixed point, when the monotone function is given succinctly (by a boolean circuit), is in the class {PLS} of problems solvable by local search and, rather surprisingly, also in the class {PPAD}. Finding the greatest or least fixed point guaranteed by Tarski's theorem, however, requires \$d{\textbackslash}cdot N\$ steps, and is {NP}-hard in the white box model. For supermodular games, we show that finding an equilibrium in such games is essentially computationally equivalent to the Tarski problem, and finding the maximum or minimum equilibrium is similarly harder. Interestingly, two-player supermodular games where the strategy space of one player is one-dimensional can be solved in \$O({\textbackslash}log N)\$ steps. We also observe that computing (approximating) the value of Condon's (Shapley's) stochastic games reduces to the Tarski problem. An important open problem highlighted by this work is proving a \${\textbackslash}Omega({\textbackslash}log{\textasciicircum}d N)\$ lower bound for small fixed dimension \$d {\textbackslash}geq 3\$.},
+	number = {{arXiv}:1909.03210},
+	publisher = {{arXiv}},
+	author = {Etessami, Kousha and Papadimitriou, Christos and Rubinstein, Aviad and Yannakakis, Mihalis},
+	urldate = {2024-03-21},
+	date = {2019-09-07},
+	eprinttype = {arxiv},
+	eprint = {1909.03210 [cs]},
+	keywords = {Computer Science - Computational Complexity, Computer Science - Computer Science and Game Theory},
+	file = {arXiv Fulltext PDF:/home/nils/Zotero/storage/9IA8YDBF/Etessami et al. - 2019 - Tarski's Theorem, Supermodular Games, and the Comp.pdf:application/pdf;arXiv.org Snapshot:/home/nils/Zotero/storage/WM7CC43S/1909.html:text/html},
+}
+
+@article{papadimitriou_complexity_1994-1,
+	title = {On the complexity of the parity argument and other inefficient proofs of existence},
+	volume = {48},
+	issn = {00220000},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022000005800637},
+	doi = {10.1016/S0022-0000(05)80063-7},
+	pages = {498--532},
+	number = {3},
+	journaltitle = {Journal of Computer and System Sciences},
+	shortjournal = {Journal of Computer and System Sciences},
+	author = {Papadimitriou, Christos H.},
+	urldate = {2024-03-22},
+	date = {1994-06},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/GL7IX74G/Papadimitriou - 1994 - On the complexity of the parity argument and other.pdf:application/pdf},
+}
+
+@article{sperner_neuer_1928,
+	title = {Neuer beweis für die invarianz der dimensionszahl und des gebietes},
+	volume = {6},
+	rights = {http://www.springer.com/tdm},
+	issn = {0025-5858, 1865-8784},
+	url = {http://link.springer.com/10.1007/BF02940617},
+	doi = {10.1007/BF02940617},
+	pages = {265--272},
+	number = {1},
+	journaltitle = {Abhandlungen aus dem Mathematischen Seminar der Universität Hamburg},
+	shortjournal = {Abh.Math.Semin.Univ.Hambg.},
+	author = {Sperner, E.},
+	urldate = {2024-04-18},
+	date = {1928-12},
+	langid = {german},
+	file = {Sperner - 1928 - Neuer beweis für die invarianz der dimensionszahl .pdf:/home/nils/Zotero/storage/WJDDXGBJ/Sperner - 1928 - Neuer beweis für die invarianz der dimensionszahl .pdf:application/pdf},
+}
+
+@book{aigner_proofs_2018,
+	location = {Berlin, Heidelberg},
+	edition = {6th ed. 2018},
+	title = {Proofs from {THE} {BOOK}},
+	isbn = {978-3-662-57265-8},
+	abstract = {This revised and enlarged sixth edition of Proofs from {THE} {BOOK} features an entirely new chapter on Van der Waerden's permanent conjecture, as well as additional, highly original and delightful proofs in other chapters. From the citation on the occasion of the 2018 "Steele Prize for Mathematical Exposition" "... It is almost impossible to write a mathematics book that can be read and enjoyed by people of all levels and backgrounds, yet Aigner and Ziegler accomplish this feat of exposition with virtuoso style. [...] This book does an invaluable service to mathematics, by illustrating for non-mathematicians what it is that mathematicians mean when they speak about beauty." From the Reviews "... Inside {PFTB} (Proofs from The Book) is indeed a glimpse of mathematical heaven, where clever insights and beautiful ideas combine in astonishing and glorious ways. There is vast wealth within its pages, one gem after another... Aigner and Ziegler... write: "... all we offer is the examples that we have selected, hoping that our readers will share our enthusiasm about brilliant ideas, clever insights and wonderful observations." I do... " Notices of the {AMS}, August 1999 "... This book is a pleasure to hold and to look at: ample margins, nice photos, instructive pictures and beautiful drawings ... It is a pleasure to read as well: the style is clear and entertaining, the level is close to elementary, the necessary background is given separately and the proofs are brilliant..." {LMS} Newsletter, January 1999 "Martin Aigner and Günter Ziegler succeeded admirably in putting together a broad collection of theorems and their proofs that would undoubtedly be in the Book of Erdös. The theorems are so fundamental, their proofs so elegant and the remaining open questions so intriguing that every mathematician, regardless of speciality, can benefit from reading this book... " {SIGACT} News, December 2011},
+	pagetotal = {1},
+	publisher = {Springer Berlin Heidelberg : Imprint: Springer},
+	author = {Aigner, Martin and Ziegler, Günter M.},
+	date = {2018},
+	doi = {10.1007/978-3-662-57265-8},
+	keywords = {Analysis, Analysis (Mathematics), Combinatorics, Computer science-Mathematics, Geometry, Graph theory, Graph Theory, Mathematical analysis, Mathematics of Computing, Number theory, Number Theory},
+	file = {Submitted Version:/home/nils/Zotero/storage/3IBMQ9RH/Aigner and Ziegler - 2018 - Proofs from THE BOOK.pdf:application/pdf},
+}
