--- a/preamble.tex
+++ b/preamble.tex
@@ -35,6 +35,12 @@
 \usepackage{math_styling/mathmacros} %Allows for the use of custom math fonts
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{import}
+\usepackage{xifthen}
+\usepackage{pdfpages}
+\usepackage{transparent}
+\usepackage{textcomp} %Textrightarrow
+\usepackage{marvosym} %Bold arrows
 
 \input{styling/title_page.tex} %Use custom title page
 
@@ -51,6 +57,12 @@
 \setmonofont[Ligatures=TeX]{Fira Mono}
 
 \newcommand{\define}[1]{\textit{#1}\index{#1}}
+
+%Easy import of inkscape figures
+\newcommand{\incfig}[1]{%
+    \def\svgwidth{\textwidth}
+    \import{./images/}{#1.pdf_tex}
+}
 
 %Settings for the justification of the text
 \tolerance=500
