Rename chapter 3, and write the section about current proof of PPAD Membership of Tarski

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -43,6 +43,7 @@
 \newcommand{\Tarskistar}{\textsc{Tarski*}}
 \newcommand{\Localopt}{\textsc{Localopt}}
 \newcommand{\Sperner}{\textsc{Sperner}}
+\newcommand{\Brouwer}{\textsc{Brouwer}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
 \newcommand{\bitstrn}{\{0, 1\}^n}
