Updates from Overleaf

--- a/styling/title_page.tex
+++ b/styling/title_page.tex
@@ -20,7 +20,7 @@
     \vfill
     {\scshape Advised by}\par
     {\scshape Prof.\ Dr.\ Bernd Gärtner}\par
-    {\scshape Sebastian Hasselbacher}\par
+    {\scshape Sebastian Haslebacher}\par
     \vspace*{0.5\drop}
     \endgroup
     %Add ETH Logo to the bottom right corner with margin
