--- a/preamble.tex
+++ b/preamble.tex
@@ -75,6 +75,10 @@
 \tolerance=500
 \hyphenpenalty=500
 
+%Setting for page breaks (i.e. no orphans or widows)
+\widowpenalty=10000
+\clubpenalty=10000
+
 %Remove space before itemize
 \setlist{nosep}
 
