Small styling fixes

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -24,6 +24,7 @@
 
 %Sets
 \newcommand{\set}[1]{\left\{#1\right\}}
+\newcommand{\interior}[1]{\text{int}\left(#1\right)}
 
 %Definition of complexity classes
 %Have the caracters be in Fira Sans Medium
@@ -44,6 +45,8 @@
 \newcommand{\Localopt}{\textsc{Localopt}}
 \newcommand{\Sperner}{\textsc{Sperner}}
 \newcommand{\Brouwer}{\textsc{Brouwer}}
+\newcommand{\EndOfPotentialLine}{\textsc{EndOfPotentialLine}}
+\newcommand{\EndOfLine}{\textsc{EndOfLine}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
 \newcommand{\bitstrn}{\{0, 1\}^n}
