--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -30,6 +30,7 @@
 \newtheorem{definitionT}{Definition}[chapter] % Definitions, the first argument is the theorem name, the second the theorem title used before the number and the third optional argument is whether to number under chapters (e.g. 2.1) or sections (e.g. 2.1.1)
 \newtheorem{theoremT}{Theorem}[chapter]
 \newtheorem{claim}{Claim}[chapter]
+\newtheorem{lemma}{Lemma}[chapter]
 
 %----------------------------------------------------------------------------------------
 %	COLORED THEOREM BOXES
